[package]
name = "post-dispatch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2 = { version = "0.10.6", default-features = false, features = ["size_opt"] }
cobs = { version = "0.2.3", default-features = false }
defmt = { version = "0.3.5", optional = true }
heapless = "0.8.0"
postcard = { version = "1.0.8", features = ["experimental-derive"] }
serde = { version = "1.0.192", default-features = false, features = ["derive"] }

#
# std-only features
#

### See `host_client.rs::serial` comments for why these duplicate dependencies exit

[dependencies.serialport_regular]
package = "serialport"
version = "4.0.1"
optional = true

[dependencies.serialport_macos_hack]
package = "serialport"
git = "https://github.com/metta-systems/serialport-rs"
rev = "7fec572529ec35b82bd4e3636d897fe2f1c2233f"
optional = true

###

[dependencies.maitake-sync]
version = "0.1.0"
optional = true

[dependencies.tokio]
version = "1.33.0"
features = ["sync", "rt"]
optional = true

[features]
default = []
use-std = [
    "maitake-sync",
    "tokio",
    "serialport_regular",
    "serialport_macos_hack",
    "cobs/use_std",
    "postcard/use-std",
]
