[package]
name = "post-dispatch"
version = "0.1.0"
edition = "2021"

[dependencies]
blake2 = { version = "0.10.6", default-features = false, features = ["size_opt"] }
cobs = { version = "0.2.3", default-features = false }
defmt = { version = "0.3.5", optional = true }
heapless = "0.8.0"
postcard = { version = "1.0.8", features = ["experimental-derive"] }
serde = { version = "1.0.192", default-features = false, features = ["derive"] }

#
# std-only features
#

[dependencies.tokio-serial]
version = "5.4.4"
optional = true

[dependencies.maitake-sync]
version = "0.1.0"
optional = true

[dependencies.tokio]
version = "1.33.0"
features = ["sync", "rt", "macros", "io-util"]
optional = true

[features]
default = []
use-std = [
    "maitake-sync",
    "tokio",
    "cobs/use_std",
    "postcard/use-std",
    "tokio-serial",
]
