[package]
name = "workbook-fw"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m                = { version = "0.7.6", features = ["inline-asm"] }
embassy-embedded-hal    = { version = "0.1.0", features = ["defmt"] }
embassy-executor        = { version = "0.5.0", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-futures         = { version = "0.1.0" }
embassy-rp              = { version = "0.1.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-sync            = { version = "0.5.0", features = ["defmt"] }
embassy-time            = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-usb             = { version = "0.2.0", features = ["defmt"] }
embedded-hal-1          = { package = "embedded-hal", version = "1.0" }
embedded-hal-bus        = { version = "0.1", features = ["async"] }
embedded-io-async       = { version = "0.6.1", features = ["defmt-03"] }
futures                 = { version = "0.3.17", default-features = false, features = ["async-await", "cfg-target-has-atomic", "unstable"] }
lis3dh-async            = { version = "0.9.2", features = ["defmt"] }
panic-probe             = { version = "0.3", features = ["print-defmt"] }
rand                    = { version = "0.8.5", default-features = false }
static_cell             = { version = "2", features = ["nightly"] }
postcard-rpc            = { version = "0.4", features = ["embassy-usb-0_2-server"] }
postcard                = { version = "1.0.8", features = ["experimental-derive"] }
portable-atomic         = { version = "1.6.0", features = ["critical-section"] }

workbook-icd            = { path = "../workbook-icd" }

cortex-m-rt         = "0.7.0"
defmt               = "0.3"
defmt-rtt           = "0.4"
embedded-hal-async  = "1.0"
fixed               = "1.23.1"
fixed-macro         = "1.2"
heapless            = "0.8"
pio                 = "0.2.1"
pio-proc            = "0.2"
smart-leds          = "0.3.0"


[profile.release]
debug = 2

[patch.crates-io]
embassy-embedded-hal = { git = "https://github.com/jamesmunns/embassy",     rev = "0d0d8e14e2b0e81307ff70c5a31e300785da19f9" }
embassy-executor     = { git = "https://github.com/jamesmunns/embassy",     rev = "0d0d8e14e2b0e81307ff70c5a31e300785da19f9" }
embassy-rp           = { git = "https://github.com/jamesmunns/embassy",     rev = "0d0d8e14e2b0e81307ff70c5a31e300785da19f9" }
embassy-sync         = { git = "https://github.com/jamesmunns/embassy",     rev = "0d0d8e14e2b0e81307ff70c5a31e300785da19f9" }
embassy-time         = { git = "https://github.com/jamesmunns/embassy",     rev = "0d0d8e14e2b0e81307ff70c5a31e300785da19f9" }
embassy-usb          = { git = "https://github.com/jamesmunns/embassy",     rev = "0d0d8e14e2b0e81307ff70c5a31e300785da19f9" }
embassy-usb-driver   = { git = "https://github.com/jamesmunns/embassy",     rev = "0d0d8e14e2b0e81307ff70c5a31e300785da19f9" }
static_cell          = { git = "https://github.com/jamesmunns/static-cell", rev = "c0337f742edcfc5d7bf91f008e37ccdb53cf2cce" }
postcard-rpc         = { git = "https://github.com/jamesmunns/postcard-rpc", rev = "eb304c2f5d9bbda796859b63d831e83d7b82961a" }
