[package]
name = "workbook-host-client"
version = "0.1.0"
edition = "2021"

[dependencies.workbook-icd]
path = "../workbook-icd"

[dependencies.postcard-rpc]
version = "0.5"
features = [
    "use-std",
    "raw-nusb",
]

[dependencies.tokio]
version = "1.37.0"
features = [
    "rt-multi-thread",
    "macros",
    "time",
]

[patch.crates-io]
postcard-rpc = { path = "../../source/postcard-rpc" }
