[package]
name = "workbook-host-client"
version = "0.1.0"
edition = "2021"

[dependencies.workbook-icd]
path = "../workbook-icd"
features = ["use-std"]

[dependencies.postcard-rpc]
version = "0.11"
features = [
    "use-std",
    "raw-nusb",
    "cobs-serial",
]

[dependencies.tokio]
version = "1.37.0"
features = [
    "rt-multi-thread",
    "macros",
    "time",
]

[dependencies.tokio-serial]
version = "5.4.4"

[patch.crates-io]
postcard-rpc = { path = "../../source/postcard-rpc" }
