[package]
name = "workbook-icd"
version = "0.1.0"
edition = "2021"

[dependencies.serde]
version = "1.0"
features = ["derive"]
default-features = false

[dependencies.postcard-rpc]
version = "0.8"

[dependencies.postcard-schema]
version = "0.1"
features = ["derive"]

[patch.crates-io]
postcard-rpc = { path = "../../source/postcard-rpc" }
