[package]
edition = "2021"
name = "james-stack"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-stm32 = { version = "0.1.0", features = ["nightly", "unstable-traits", "defmt", "stm32f405rg", "unstable-pac", "memory-x", "time-driver-any", "exti", "embedded-sdmmc", "chrono"]  }
embassy-sync = { version = "0.4.0", features = ["defmt"] }
embassy-executor = { version = "0.3.1", features = ["nightly", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.1.5", features = ["defmt", "defmt-timestamp-uptime", "unstable-traits", "tick-hz-32_768"] }
embassy-usb = { version = "0.1.0", features = ["defmt" ] }
embassy-net = { version = "0.2.0", features = ["defmt", "tcp", "dhcpv4", "medium-ethernet", "nightly"] }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
embedded-io = { version = "0.6.0" }
embedded-io-async = { version = "0.6.0" }
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
heapless = { version = "0.7.5", default-features = false }
static_cell = { version = "2", features = ["nightly"]}
cobs = { version = "0.2.3", default-features = false }

[dependencies.postcard]
version = "1.0.8"

[dependencies.serde]
version = "1.0.192"
default-features = false

[dependencies.post-dispatch]
path = "../../post-dispatch"
features = ["defmt"]

[dependencies.james-icd]
path = "../james-icd"

[profile.release]
debug = 2
lto = "fat"
codegen-units = 1
incremental = false
opt-level = 'z'

[patch.crates-io]
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "b3367be9c8f0eb54d500dc2e6f652ade05859088" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "b3367be9c8f0eb54d500dc2e6f652ade05859088" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "b3367be9c8f0eb54d500dc2e6f652ade05859088" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "b3367be9c8f0eb54d500dc2e6f652ade05859088" }
embassy-usb = { git = "https://github.com/embassy-rs/embassy", rev = "b3367be9c8f0eb54d500dc2e6f652ade05859088" }
embassy-net = { git = "https://github.com/embassy-rs/embassy", rev = "b3367be9c8f0eb54d500dc2e6f652ade05859088" }

[features]


