[package]
name = "postcard-rpc-test"
version = "0.1.0"
edition = "2021"

[dependencies.postcard]
version = "1.0.10"
features = ["use-std", "experimental-derive"]

[dependencies.serde]
version = "1.0.192"
features = ["derive"]

[dependencies.postcard-rpc]
path = "../postcard-rpc"
features = ["use-std", "test-utils"]

[dependencies.postcard-schema-ng]
version = "0.3.0"
features = ["derive"]

[dependencies.tokio]
version = "1.34.0"
features = ["rt", "macros", "sync", "time"]

[features]
default = ["alpha"]
alpha = []

[patch.crates-io.postcard-schema]
git = "https://github.com/rslawson/postcard"
features = ["derive"]
