[package]
name = "postcard-rpc"
version = "0.4.2"
authors = ["James Munns <james@onevariable.com>"]
edition = "2021"
repository = "https://github.com/jamesmunns/postcard-rpc"
description = "A no_std + serde compatible RPC library for Rust"
license = "MIT OR Apache-2.0"
categories = [
    "embedded",
    "no-std",
]
keywords = [
    "serde",
    "cobs",
    "framing",
]
documentation = "https://docs.rs/postcard-rpc/"
readme = "../../README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[dependencies]
cobs = { version = "0.2.3", optional = true, default-features = false }
defmt = { version = "0.3.5", optional = true }
heapless = "0.8.0"
postcard = { version = "1.0.8", features = ["experimental-derive"] }
serde = { version = "1.0.192", default-features = false, features = ["derive"] }

#
# std-only features
#

[dependencies.nusb]
version = "0.1"
optional = true

[dependencies.tokio-serial]
version = "5.4.4"
optional = true

[dependencies.maitake-sync]
version = "0.1.0"
optional = true

[dependencies.tokio]
version = "1.33.0"
features = ["sync", "rt", "macros", "io-util"]
optional = true

[dependencies.tracing]
version = "0.1"
optional = true

#
# no_std-only features
#

[dependencies.embassy-usb]
version = "0.2"
optional = true

[dependencies.embassy-usb-driver]
version = "0.1"
optional = true

[dependencies.embassy-sync]
version = "0.5"
optional = true

[dependencies.static_cell]
version = "2.0"
optional = true

[dependencies.embassy-executor]
version = "0.5"
optional = true

#
# Hack features (see below)
#
[dependencies.ssmarshal]
version = "1.0"
optional = true
features = ["std"]

[features]
default = [
    "embassy-usb-0_2-server",
]
test-utils = [
    "use-std",
]
use-std = [
    "dep:maitake-sync",
    "dep:tokio",
    "postcard/use-std",
    "dep:tracing",
]
cobs-serial = [
    "cobs/use_std",
    "dep:tokio-serial",
]
raw-nusb = [
    "dep:nusb",
    "use-std",
]
embassy-usb-0_2-server = [
    "dep:embassy-usb",
    "dep:embassy-sync",
    "dep:static_cell",
    "dep:embassy-usb-driver",
    "dep:embassy-executor",
]

# NOTE: This exists because `embassy-usb` indirectly relies on ssmarshal
# which doesn't work on `std` builds without the `std` feature. This causes
# `cargo doc --all-features` (and docs.rs builds) to fail. Sneakily re-active
# that feature when `--all-features` is set. This feature is considered unstable
# and should not be relied upon.
_docs-fix = [
    "dep:ssmarshal",
]

[patch.crates-io]
embassy-usb = { git = "https://github.com/jamesmunns/embassy", rev = "0d0d8e14e2b0e81307ff70c5a31e300785da19f9" }
embassy-usb-driver = { git = "https://github.com/jamesmunns/embassy", rev = "0d0d8e14e2b0e81307ff70c5a31e300785da19f9" }
static_cell = { git = "https://github.com/jamesmunns/static-cell", rev = "c0337f742edcfc5d7bf91f008e37ccdb53cf2cce" }
