[package]
name = "host-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cobs = "0.2.3"
maitake-sync = "0.1.0"
rand = "0.8.5"

[dependencies.postcard]
version = "1.0.8"
features = ["use-std"]

[dependencies.tokio]
version = "1.33.0"
features = ["sync", "time", "macros", "rt-multi-thread"]

[dependencies.serde]
version = "1.0.192"
default-features = false

[dependencies.james-icd]
path = "../james-icd"

[dependencies.postcard-rpc]
path = "../../../source/postcard-rpc"
features = ["use-std"]
