[package]
name = "james-icd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = { version = "0.3.5", optional = true }
postcard = { version = "1.0.8", features = ["experimental-derive"] }
serde = { version = "1.0.192", features = ["derive"], default-features = false }
postcard-rpc = { path = "../../../source/postcard-rpc" }
